force-app/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>Tabla que contendrá el detalle de la trazabilidad de las integraciones.</description>
    <label>Log</label>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>