force-app/main/default/objects/Log__c/fields/Aplicacion__c.field-meta.xml
<CustomField>
    <fullName>Aplicacion__c</fullName>
    <label>Aplicacion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>