force-app/main/default/objects/Log__c/fields/identificador__c.field-meta.xml
<CustomField>
    <fullName>identificador__c</fullName>
    <label>identificador</label>
    <type>TextArea</type>
</CustomField>