force-app/main/default/objects/Log__c/fields/MensajeEnviado__c.field-meta.xml
<CustomField>
    <fullName>MensajeEnviado__c</fullName>
    <label>MensajeEnviado</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>