force-app/main/default/objects/Log__c/fields/MensajeRecibido__c.field-meta.xml
<CustomField>
    <fullName>MensajeRecibido__c</fullName>
    <label>MensajeRecibido</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>