force-app/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Aplicacion__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>identificador__c</columns>
    <columns>MensajeEnviado__c</columns>
    <columns>MensajeRecibido__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>