force-app/main/default/objects/Log__c/listViews/Leads_Fotocasa.listView-meta.xml
<ListView>
    <fullName>Leads_Fotocasa</fullName>
    <columns>NAME</columns>
    <columns>Aplicacion__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>MensajeRecibido__c</columns>
    <columns>MensajeEnviado__c</columns>
    <columns>identificador__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>CargaLeadsFotocasa</value>
    </filters>
    <label>Leads Fotocasa</label>
</ListView>